# server-monitoring-made-easy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  alembic.ini  config.yaml  config_example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yaml
app/: cli.py  config.py  db.py  models.py
app/core/: alerts.py  metrics.py  monitor.py  storage.py  storage_file.py  storage_postgres.py
app/monitors/: __init__.py  base.py  cpu.py  disk.py  memory.py  ping.py
app/notifiers/: notices.py
migrations/: env.py
migrations/versions/: add_hostname_column.py  initial_schema.py
packaging/systemd/: sme.service
tests/: conftest.py  test_metrics.py
