[tool.poetry]
name = "server-monitoring-made-easy"
version = "0.1.1"
description = "Simple and effective server monitoring with easy configuration and multiple notification options"
authors = ["Tim Bryant <timothybryant3@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
psutil = "^5.9.8"
apprise = "^1.7.1"
click = "^8.1.7"
prometheus-client = "^0.20.0"
requests = "^2.31.0"
python-daemon = "^3.0.1"
structlog = "^24.1.0"
python-semantic-release = "^9.14.0"
rich = "^13.7.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
black = "^24.8.0"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
sme = "app.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "app"
]
filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "refactor",
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "feat",
    ":boom:",
    "BREAKING_CHANGE",
]
major_tags = [":boom:", "BREAKING_CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "style", "docs", "ci", "test", "refactor", "chore", "build"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
